--- a/Untitled.ipynb
+++ b/Untitled.ipynb
@@ -3,7 +3,7 @@
   {
    "cell_type": "code",
    "execution_count": 1,
-   "id": "5f0fd160",
+   "id": "63ff1a37",
    "metadata": {},
    "outputs": [
     {
@@ -21,7 +21,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "46db1663",
+   "id": "a5c0f491",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -50,7 +50,7 @@
   {
    "cell_type": "code",
    "execution_count": 15,
-   "id": "7256f07f",
+   "id": "9a66c311",
    "metadata": {},
    "outputs": [
     {
@@ -81,7 +81,7 @@
   {
    "cell_type": "code",
    "execution_count": 34,
-   "id": "da6eac54",
+   "id": "da7d49b8",
    "metadata": {},
    "outputs": [
     {
@@ -101,32 +101,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 63,
-   "id": "0e1c284f",
+   "execution_count": 81,
+   "id": "4f967566",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "The first 10 words in our dictionary are: \n",
-      "['painchest', 'shortnessof', 'breath', 'dizziness', 'asthenia', 'fall', 'syncope', 'vertigo', 'sweat', 'umls']\n",
-      "The dictionary has 419070 words \n",
-      "The dictionary has  419070 key values pairs\n",
-      "Enter any word:welc\n",
-      "word 0: weld, probability 0.000010\n",
-      "word 1: welt, probability 0.000004\n",
-      "word 2: welf, probability 0.000002\n",
-      "word 3: well, probability 0.002427\n",
-      "word 4: welch, probability 0.000002\n",
-      "word 5: welcy, probability 0.000002\n",
-      "word 6: wels, probability 0.000002\n",
-      "word 7: welk, probability 0.000002\n",
-      "word 8: elc, probability 0.000002\n",
-      "word 9: weli, probability 0.000002\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "# Step 1: Data Preprocessing\n",
     "import re  # regular expression\n",
@@ -134,222 +112,174 @@
     "import numpy as np\n",
     "import pandas as pd\n",
     "\n",
-    "\n",
-    "# Implement the function process_data which\n",
-    "# 1) Reads in a corpus\n",
-    "# #2) Changes everything to lowercase\n",
-    "# 3) Returns a list of words.\n",
-    "\n",
-    "\n",
-    "w = [] #words\n",
-    "with open('words.txt','r',encoding=\"utf8\") as f:\n",
-    "    file_name_data = f.read()\n",
-    "    file_name_data = file_name_data.lower()\n",
-    "    w = re.findall('\\w+', file_name_data)\n",
-    "\n",
-    "\n",
-    "v = set(w) #vocabulary\n",
-    "print(f\"The first 10 words in our dictionary are: \\n{w[0:10]}\")\n",
-    "print(f\"The dictionary has {len(v)} words \")\n",
-    "\n",
-    "\n",
-    "# a get_count function that returns a dictionary of word vs frequency\n",
-    "def get_count(words):\n",
-    "    word_count = {}\n",
-    "    for word in words:\n",
-    "        if word in word_count:\n",
-    "            word_count[word] += 1\n",
-    "        else:\n",
-    "            word_count[word] = 1\n",
-    "    return word_count\n",
-    "\n",
-    "\n",
-    "word_count = get_count(w)\n",
-    "print(f\"The dictionary has  {len(word_count)} key values pairs\")\n",
-    "\n",
-    "\n",
-    "\n",
-    "\n",
-    "# implement get_probs function\n",
-    "# to calculate the probability that any word will appear if randomly selected from the dictionary\n",
-    "\n",
-    "def get_probs(word_count_dict):\n",
-    "    probs = {}\n",
-    "    m = sum(word_count_dict.values())\n",
-    "    for key in word_count_dict.keys():\n",
-    "        probs[key] = word_count_dict[key] / m\n",
-    "    return probs\n",
-    "\n",
-    "\n",
-    "# Now we implement 4 edit word functions\n",
-    "\n",
-    "# DeleteLetter:removes a letter from a given word\n",
-    "def DeleteLetter(word):\n",
-    "    delete_list = []\n",
-    "    split_list = []\n",
-    "    for i in range(len(word)):\n",
-    "        split_list.append((word[0:i], word[i:]))\n",
-    "    for a, b in split_list:\n",
-    "        delete_list.append(a + b[1:])\n",
-    "    return delete_list\n",
-    "\n",
-    "\n",
-    "delete_word_l = DeleteLetter(word=\"cans\")\n",
-    "\n",
-    "# SwitchLetter:swap two adjacent letters\n",
-    "def SwitchLetter(word):\n",
-    "    split_l = []\n",
-    "    switch_l = []\n",
-    "    for i in range(len(word)):\n",
-    "        split_l.append((word[0:i], word[i:]))\n",
-    "    switch_l = [a + b[1] + b[0] + b[2:] for a, b in split_l if len(b) >= 2]\n",
-    "    return switch_l\n",
-    "\n",
-    "\n",
-    "switch_word_l = SwitchLetter(word=\"eta\")\n",
-    "\n",
-    "# replace_letter: changes one letter to another\n",
-    "def replace_letter(word):\n",
-    "    split_l = []\n",
-    "    replace_list = []\n",
-    "    for i in range(len(word)):\n",
-    "        split_l.append((word[0:i], word[i:]))\n",
-    "    alphabets = 'abcdefghijklmnopqrstuvwxyz'\n",
-    "    replace_list = [a + l + (b[1:] if len(b) > 1 else '') for a, b in split_l if b for l in alphabets]\n",
-    "    return replace_list\n",
-    "\n",
-    "\n",
-    "replace_l = replace_letter(word='can')\n",
-    "\n",
-    "# insert_letter: adds additional characters\n",
-    "def insert_letter(word):\n",
-    "    split_l = []\n",
-    "    insert_list = []\n",
-    "    for i in range(len(word) + 1):\n",
-    "        split_l.append((word[0:i], word[i:]))\n",
-    "    letters = 'abcdefghijklmnopqrstuvwxyz'\n",
-    "    insert_list = [a + l + b for a, b in split_l for l in letters]\n",
-    "    # print(split_l)\n",
-    "    return insert_list\n",
-    "\n",
-    "\n",
-    "\n",
-    "# combining the edits\n",
-    "# switch operation optional\n",
-    "def edit_one_letter(word, allow_switches=True):\n",
-    "    edit_set1 = set()\n",
-    "    edit_set1.update(DeleteLetter(word))\n",
-    "    if allow_switches:\n",
-    "        edit_set1.update(SwitchLetter(word))\n",
-    "    edit_set1.update(replace_letter(word))\n",
-    "    edit_set1.update(insert_letter(word))\n",
-    "    return edit_set1\n",
-    "\n",
-    "\n",
-    "\n",
-    "# edit two letters\n",
-    "def edit_two_letters(word, allow_switches=True):\n",
-    "    edit_set2 = set()\n",
-    "    edit_one = edit_one_letter(word, allow_switches=allow_switches)\n",
-    "    for w in edit_one:\n",
-    "        if w:\n",
-    "            edit_two = edit_one_letter(w, allow_switches=allow_switches)\n",
-    "            edit_set2.update(edit_two)\n",
-    "    return edit_set2\n",
-    "\n",
-    "\n",
     " \n",
-    "def get_corrections(word, probs, vocab, n=2):\n",
-    "    suggested_word = []\n",
-    "    best_suggestion = []\n",
-    "    suggested_word = list(\n",
-    "        (word in vocab and word) or edit_one_letter(word).intersection(vocab) or edit_two_letters(word).intersection(\n",
-    "            vocab))\n",
-    "    best_suggestion = [[s, probs[s]] for s in list(reversed(suggested_word))]\n",
-    "    return best_suggestion\n",
+    "\n",
+    "def autocorrectword(my_word):\n",
+    "    w = []  \n",
+    "    with open('words.txt','r',encoding=\"utf8\") as f:\n",
+    "        file_name_data = f.read()\n",
+    "        file_name_data = file_name_data.lower()\n",
+    "        w = re.findall('\\w+', file_name_data)\n",
     "\n",
     "\n",
-    "my_word = input(\"Enter any word:\")\n",
-    "probs = get_probs(word_count)\n",
-    "tmp_corrections = get_corrections(my_word, probs, v, 2)\n",
-    "words_prob={}\n",
-    "box=[]\n",
+    "    v = set(w) \n",
+    " \n",
     "\n",
-    "for i, word_prob in enumerate(tmp_corrections):\n",
-    "    print(f\"word {i}: {word_prob[0]}, probability {word_prob[1]:.6f}\")\n",
-    "    words_prob[str(word_prob[1])]=word_prob[0]\n",
-    "    box.append([str(word_prob[1]),word_prob[0]])"
+    "\n",
+    "    def get_count(words):\n",
+    "        word_count = {}\n",
+    "        for word in words:\n",
+    "            if word in word_count:\n",
+    "                word_count[word] += 1\n",
+    "            else:\n",
+    "                word_count[word] = 1\n",
+    "        return word_count\n",
+    "\n",
+    "\n",
+    "    word_count = get_count(w)\n",
+    " \n",
+    "\n",
+    "\n",
+    "\n",
+    "\n",
+    "\n",
+    "\n",
+    "    def get_probs(word_count_dict):\n",
+    "        probs = {}\n",
+    "        m = sum(word_count_dict.values())\n",
+    "        for key in word_count_dict.keys():\n",
+    "            probs[key] = word_count_dict[key] / m\n",
+    "        return probs\n",
+    "\n",
+    "\n",
+    "    # Now we implement 4 edit word functions\n",
+    "\n",
+    "\n",
+    "    def DeleteLetter(word):\n",
+    "        delete_list = []\n",
+    "        split_list = []\n",
+    "        for i in range(len(word)):\n",
+    "            split_list.append((word[0:i], word[i:]))\n",
+    "        for a, b in split_list:\n",
+    "            delete_list.append(a + b[1:])\n",
+    "        return delete_list\n",
+    "\n",
+    "\n",
+    "    delete_word_l = DeleteLetter(word=\"cans\")\n",
+    "\n",
+    "    def SwitchLetter(word):\n",
+    "        split_l = []\n",
+    "        switch_l = []\n",
+    "        for i in range(len(word)):\n",
+    "            split_l.append((word[0:i], word[i:]))\n",
+    "        switch_l = [a + b[1] + b[0] + b[2:] for a, b in split_l if len(b) >= 2]\n",
+    "        return switch_l\n",
+    "\n",
+    "\n",
+    "    switch_word_l = SwitchLetter(word=\"eta\")\n",
+    "\n",
+    "\n",
+    "    def replace_letter(word):\n",
+    "        split_l = []\n",
+    "        replace_list = []\n",
+    "        for i in range(len(word)):\n",
+    "            split_l.append((word[0:i], word[i:]))\n",
+    "        alphabets = 'abcdefghijklmnopqrstuvwxyz'\n",
+    "        replace_list = [a + l + (b[1:] if len(b) > 1 else '') for a, b in split_l if b for l in alphabets]\n",
+    "        return replace_list\n",
+    "\n",
+    "\n",
+    "    replace_l = replace_letter(word='can')\n",
+    "\n",
+    "\n",
+    "    def insert_letter(word):\n",
+    "        split_l = []\n",
+    "        insert_list = []\n",
+    "        for i in range(len(word) + 1):\n",
+    "            split_l.append((word[0:i], word[i:]))\n",
+    "        letters = 'abcdefghijklmnopqrstuvwxyz'\n",
+    "        insert_list = [a + l + b for a, b in split_l for l in letters]\n",
+    "        # print(split_l)\n",
+    "        return insert_list\n",
+    "\n",
+    "\n",
+    "    def edit_one_letter(word, allow_switches=True):\n",
+    "        edit_set1 = set()\n",
+    "        edit_set1.update(DeleteLetter(word))\n",
+    "        if allow_switches:\n",
+    "            edit_set1.update(SwitchLetter(word))\n",
+    "        edit_set1.update(replace_letter(word))\n",
+    "        edit_set1.update(insert_letter(word))\n",
+    "        return edit_set1\n",
+    "\n",
+    "\n",
+    "    def edit_two_letters(word, allow_switches=True):\n",
+    "        edit_set2 = set()\n",
+    "        edit_one = edit_one_letter(word, allow_switches=allow_switches)\n",
+    "        for w in edit_one:\n",
+    "            if w:\n",
+    "                edit_two = edit_one_letter(w, allow_switches=allow_switches)\n",
+    "                edit_set2.update(edit_two)\n",
+    "        return edit_set2\n",
+    "\n",
+    "\n",
+    "\n",
+    "    def get_corrections(word, probs, vocab, n=2):\n",
+    "        suggested_word = []\n",
+    "        best_suggestion = []\n",
+    "        suggested_word = list(\n",
+    "            (word in vocab and word) or edit_one_letter(word).intersection(vocab) or edit_two_letters(word).intersection(\n",
+    "                vocab))\n",
+    "        best_suggestion = [[s, probs[s]] for s in list(reversed(suggested_word))]\n",
+    "        return best_suggestion\n",
+    "\n",
+    "\n",
+    "\n",
+    "    probs = get_probs(word_count)\n",
+    "    tmp_corrections = get_corrections(my_word, probs, v, 2)\n",
+    " \n",
+    "    box=[]\n",
+    "\n",
+    "    for i, word_prob in enumerate(tmp_corrections):\n",
+    "       # print(f\"word {i}: {word_prob[0]}, probability {word_prob[1]:.6f}\")\n",
+    "        box.append([str(f'{word_prob[1]:.6f}'),word_prob[0]])\n",
+    "    box.sort()\n",
+    "    return box"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 59,
-   "id": "8794fdfd",
+   "execution_count": 85,
+   "id": "16d72cc5",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "{'6.197154731333976e-05': 'hell',\n",
-       " '1.9366108535418674e-06': 'herc',\n",
-       " '3.873221707083735e-06': 'helm',\n",
-       " '5.809832560625603e-06': 'held',\n",
-       " '7.74644341416747e-06': 'help'}"
+       "[['0.000002', 'segregate']]"
       ]
      },
-     "execution_count": 59,
+     "execution_count": 85,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "words_prob"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 64,
-   "id": "e3d0e155",
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "[['9.683054267709338e-06', 'weld'],\n",
-       " ['3.873221707083735e-06', 'welt'],\n",
-       " ['1.9366108535418674e-06', 'welf'],\n",
-       " ['0.00242657339948796', 'well'],\n",
-       " ['1.9366108535418674e-06', 'welch'],\n",
-       " ['1.9366108535418674e-06', 'welcy'],\n",
-       " ['1.9366108535418674e-06', 'wels'],\n",
-       " ['1.9366108535418674e-06', 'welk'],\n",
-       " ['1.9366108535418674e-06', 'elc'],\n",
-       " ['1.9366108535418674e-06', 'weli']]"
-      ]
-     },
-     "execution_count": 64,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "box"
+    "autocorrectword('segrerate')"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 65,
-   "id": "108e30c0",
+   "id": "c75657f8",
    "metadata": {},
    "outputs": [],
-   "source": [
-    "box.sort()"
-   ]
+   "source": []
   },
   {
    "cell_type": "code",
    "execution_count": 66,
-   "id": "4e362680",
+   "id": "0f63823b",
    "metadata": {},
    "outputs": [
     {
@@ -379,7 +309,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "a1ff5681",
+   "id": "652e068f",
    "metadata": {},
    "outputs": [],
    "source": []
